tournaments page spacing fix

--- a/public/styles/dashboard_style.css
+++ b/public/styles/dashboard_style.css
@@ -292,6 +292,7 @@ select option{
 
 .tournamentsHeader{
   font-size: 40px;
+  margin-bottom: 20px !important;
 }
 
 .myTournamentsHeader{
@@ -509,10 +510,9 @@ text-align: center;
 }
 
 .filterAndSearchbar{
-  padding-top: 20px;
   padding-left: 12px;
   padding-right: 12px;
-  height: 70px;
+  height: 60px;
   display: inline-block;
   float: left;
   width: 100%;
